arreglos max-width

--- a/style.css
+++ b/style.css
@@ -223,12 +223,13 @@ footer {
         }
     }
 
-@media (max-width: 512px){
+@media (max-width: 480px){
       .nav-container{
         flex-direction: column;
       }
       .lore-container{
-          width: 20rem;
+          flex-direction: column;
+          width: 15rem;
           margin-left: 3%;
       }
       #wait{
